# mtg-chronicle

./: .gitignore  LICENSE  TODO  docker-compose.yml  package.json
.github/workflows/: build-docker-containers.yml
bot/: Dockerfile  package.json  tsconfig.json
bot/prisma/: schema.prisma
bot/prisma/migrations/20240414084255_initial_card_schema/: migration.sql
bot/prisma/migrations/20240427171846_rename_colums/: migration.sql
bot/prisma/migrations/20240427182342_add_discord_guild_id_to_db/: migration.sql
bot/prisma/migrations/20240427182535_make_it_unique_i_forgor/: migration.sql
bot/prisma/migrations/20240427194217_create_new_image_table/: migration.sql
bot/prisma/migrations/20240427194347_fix_colum_names/: migration.sql
bot/prisma/migrations/20240427194817_fix_more_stuff/: migration.sql
bot/prisma/migrations/20240428072122_move_the_relationships_again/: migration.sql
bot/src/: index.ts
bot/src/commands/: Integration.ts  customcards.ts  eval.ts  info.ts  ping.ts
bot/src/integrations/: candid.ts
bot/src/lib/: cardFetcher.ts  constants.ts  integrationsLib.ts  setup.ts  utils.ts
bot/src/lib/extensions/: PaignatedMessages.ts
bot/src/listeners/: messageCreate.ts  ready.ts
bot/src/preconditions/: OwnerOnly.ts  ServerManager.ts
bot/src/routes/: up.ts
docs/: COPYRIGHT.md
dump-parser/: Cargo.toml  Dockerfile
dump-parser/src/: main.rs
src/: index.ts
src/lib/: cardFetcher.ts  constants.ts  emojis.ts  scryfall.ts  setup.ts  utils.ts
src/lib/extensions/: PaignatedMessages.ts
src/listeners/: messageCreate.ts
(+11 files in other folders)
