[package]
name = "dump-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
job_scheduler = "1.2.1"
redis = "0.24.0"
reqwest = { version = "0.11.25", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
openssl = { version = "0.10" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

