[package]
name = "dump-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
job_scheduler = "1.2.1"
redis = "0.25.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
openssl = { version = "0.10" }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

